# cs184-jello

./: .gitignore  CMakeLists.txt  cs184-jello.sln  glad.c  main.cpp
cs184-jello/: CMakeCache.txt  CMakeLists.txt  Makefile  camera.h  cmake_install.cmake  cs184-jello.vcxproj  cs184-jello.vcxproj.filters  lightSourceShader.fs  main.cpp  mesh.h  model.h  physobj.h
cs184-jello/cs184-jello/: Makefile  cmake_install.cmake  cs184-jello
cs184-jello/resources/objects/jello/: jello.blend
cs184-jello/shaders/: lightSourceShader.fs  shader.fs  shader.vs
glad/include/glad/: glad.h
glad/src/: glad.c
include/glad/: glad.h
lib/: assimp-vc143-mtd.lib  glfw3.lib
src/: CMakeCache.txt  Makefile  bbox.h  cage.h  camera.h  cmake_install.cmake  main.cpp  mesh.h  model.h  modelShader.h  shader.h  simulate.h
src/cs184-jello/: Makefile  cmake_install.cmake  cs184-jello
src/resources/objects/jello/: jello.mtl
src/resources/objects/plate/: bowl.blend  plate.blend
src/shaders/: lightSourceShader.frag  line_shader.frag  plane_shader.frag  plane_shader.vertex  pt_shader.frag  shader.fs  shader.vs  trans.frag  trans.vertex  translucent.frag  translucent.vert
